fixed some responsive design issues on deployed site on mobile

--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -64,6 +64,7 @@
         flex-direction: column;
         overflow-x: none;
         scroll-snap-type: y;
+        align-items: center;
     }
 
     .gallery-btn {
